--- a/src/App.css
+++ b/src/App.css
@@ -229,8 +229,8 @@ footer{
 
 /* social media contacts */
 #social{
-  height: 40px;
-  width: 40px;
+  height: 45px;
+  width: 45px;
 }
 #social2{
   height: 45px;
@@ -441,4 +441,38 @@ footer{
     width: 90%;
     border-radius: 15px;
   }
+}
+
+/* Forms */
+form{
+  border: 1px solid goldenrod;
+  border-radius: 30px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
+input{
+  padding: 7px;
+  border-radius: 12px;
+  border: 2px solid transparent;
+  transition: border 3s ease-in-out;
+}
+
+input:focus-visible{
+  border-color: goldenrod;
+}
+
+textarea:focus-visible{
+  border-color: goldenrod;
+}
+
+/* Button */
+button{
+  background-color: goldenrod;
+  color: black;
+}
+
+button:hover{
+  background-color: rgb(171, 129, 24);
+  border: 1px solid red;
 }
